# pyiconv

./: pyproject.toml
.github/workflows/: CI.yml  black.yml
src/pyiconv/: lib.py
src/pyiconv/cli/: pyiconv.py
