[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaerocom_parallelization"
version = "0.1.0"
authors = [{ name = "MET Norway" }]
description = "simple python based repcaement for iconv also supporting weird encodings"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/jgriesfeller/pyiconv"
"Bug Tracker" = "https://github.com/jgriesfeller/pyiconv/issues"

[project.scripts]
pyiconv = "pyiconv.cli.pyiconv:main"

[tool.black]
target-version = ['py38']
line-length = 99

[tool.isort]
py_version = "38"
profile = "black"
src_paths = ["src", "tests"]
line_length = 99

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
pretty = true
sqlite_cache = true
#exclude = "pyaerocom-tutorials|_build"

[[tool.mypy.overrides]]
module = ["pyaerocom.*"]
warn_unused_ignores = false

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, format, lint
skip_missing_interpreters = True
isolated_build = True

[testenv:format]
commands =
    pre-commit run --all-files --show-diff-on-failure
deps =
    pre-commit

[testenv:lint]
commands =
    mypy .
depends = 
    mypy>=0.981
"""